--- a/server/index.html
+++ b/server/index.html
@@ -7,7 +7,7 @@
     height: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 100px 1fr 0.4fr;
+    grid-template-rows: 80px 1fr 0.4fr;
     grid-template-areas: 'header header' 'code result' 'output output';
 }
 
@@ -26,6 +26,12 @@
 .area-output {
     grid-area: output;
 }
+        </style>
+        <style type="text/css" media="screen">
+            #editor { 
+                width: 100%;
+                height: 100%;
+            }
         </style>
         <title>SATySFi Playground</title>
         <script>
@@ -60,8 +66,7 @@
                 <button style="font-size: 40px" onclick="compile()">Compile</button>
             </div>
             <div class='area-code'>
-                <textarea id="code" style="font-size: 16px; width: 100%; height: 100%">
-@require: stdjabook
+                <div id='editor'>@require: stdjabook
 
 document (|
   title = {\SATySFi;概説};
@@ -72,8 +77,12 @@ document (|
     +pn {
         Hello, \SATySFi; Playground!
     }
->
-                </textarea> 
+>`);</div>
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.3.1/ace.js" type="text/javascript" charset="utf-8"></script>
+                <script>
+                    let editor = ace.edit("editor");
+                    editor.setTheme("ace/theme/monokai");
+                </script>
             </div>
             <div class='area-result'>
                 <iframe id="result-container" src="/files/2f4b1088a4526a5faf4dea3c3ca6940113247c550951e1ecc74e510ff5ab689b.pdf" style="width: 100%; height: 100%"></iframe>
