--- a/server/index.html
+++ b/server/index.html
@@ -77,7 +77,7 @@ document (|
     +pn {
         Hello, \SATySFi; Playground!
     }
->`);</div>
+></div>
                 <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.3.1/ace.js" type="text/javascript" charset="utf-8"></script>
                 <script>
                     let editor = ace.edit("editor");
